Use ProcessBuilder everywhere